# docker-run

./: main.py  pyproject.toml  test.py
app/: test.py
