[tool.poetry]
name = "docker-run"
version = "0.1.0"
description = ""
authors = ["Oguz Ozsaygin <oguz.ozsaygin@popleads.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.3"
docker = "^7.0.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
